# minecraft-server

./: .gitignore  README.md  pyproject.toml  server.py
infrastructure/: README.md  cloudflare.tf  firewall.tf  main.tf  outputs.tf  server.tf  userdata.sh  userdata.tpl
lambdas/minecraft_server_bot/: command.py  config.py  handle_request.py  instance_state.py  minecraft_server_bot.py  request.py  responses.py  slack.py
lambdas/minecraft_server_state_change/: minecraft_server_state_change.py
